The model category has been refactored and the revenus has been grouped with category